# rtd-tutorial

./: .bazel_fix_commands.json  .readthedocs.yaml  BUILD.bazel  crossrefs.md  docs.sh  func_template.vm  install_sphinx_sources.sh  mydocs.tmpl  mylib.bzl
docs/: requirements.txt
docs/source/: api.rst  conf.py  docs.md  index.rst  myapi.md  mylib.md  usage.rst
docs/source/_static/css/: custom.css
