load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")

genrule(
    name = "docs",
    srcs = ["mydocs.tmpl"],
    outs = ["docs.md"],
    cmd = "cp $< $@",
)

sh_binary(
    name = "install_sphinx_sources",
    srcs = ["install_sphinx_sources.sh"],
    args = [
        "$(rootpath :docs)",
        "$(rootpaths :mylib_docs)",
    ],
    data = [
        "crossrefs.md",
        ":docs",
        ":mylib_docs",
        ":sphinx_sources",
    ],
)

filegroup(
    name = "sphinx_sources",
    srcs = [
        "docs/source/conf.py",
        "docs/source/index.rst",
        "docs/source/usage.rst",
    ] + glob(["docs/source/_static/**"]),
)

stardoc(
    name = "mylib_docs",
    out = "mylib.md",
    func_template = "func_template.vm",
    input = "mylib.bzl",
)
